[gd_scene format=3 uid="uid://bcvt254axwueq"]

[ext_resource type="Script" uid="uid://bg3x8bbvfs0g1" path="res://src/main/monster/sim/naive_solver.gd" id="1_4626d"]

[node name="NaiveSolver" type="Node" unique_id=1129839505 groups=["naive_solvers"]]
script = ExtResource("1_4626d")

[node name="VerboseTimer" type="Timer" parent="." unique_id=985385314]
unique_name_in_owner = true
wait_time = 5.0

[connection signal="timeout" from="VerboseTimer" to="." method="_on_verbose_timer_timeout"]
